// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postToCore should call core api 1`] = `
Object {
  "query": "mutation CreateSession($sessionInput:CreateSessionInput!){createSession(input:$sessionInput){entity{id}}}",
  "variables": Object {
    "sessionInput": Object {
      "description": "[View Release](https://git.hub/some/project/releases/v1.0.0)
<h1 id=\\"my-notes\\">My Notes</h1>
<ul>
<li>PR <a href=\\"google.com\\">some link</a></li>
</ul>
",
      "name": "New Release: v1.0.0",
      "network": "1-1-1-1",
      "sessType": "1234",
    },
  },
}
`;

exports[`postToCore should call core api in network env var 1`] = `
Object {
  "query": "mutation CreateSession($sessionInput:CreateSessionInput!){createSession(input:$sessionInput){entity{id}}}",
  "variables": Object {
    "sessionInput": Object {
      "description": "[View Release](https://git.hub/some/project/releases/v1.0.0)
<h1 id=\\"my-notes\\">My Notes</h1>
<ul>
<li>PR <a href=\\"google.com\\">some link</a></li>
</ul>
",
      "name": "New Release: v1.0.0",
      "network": "2-2-2-2",
      "sessType": "1234",
    },
  },
}
`;

exports[`postToCore should call core api in sessionType env var 1`] = `
Object {
  "query": "mutation CreateSession($sessionInput:CreateSessionInput!){createSession(input:$sessionInput){entity{id}}}",
  "variables": Object {
    "sessionInput": Object {
      "description": "[View Release](https://git.hub/some/project/releases/v1.0.0)
<h1 id=\\"my-notes\\">My Notes</h1>
<ul>
<li>PR <a href=\\"google.com\\">some link</a></li>
</ul>
",
      "name": "New Release: v1.0.0",
      "network": "2-2-2-2",
      "sessType": "baz",
    },
  },
}
`;

exports[`postToCore should call core api in workspace env var 1`] = `
Object {
  "query": "mutation CreateSession($sessionInput:CreateSessionInput!){createSession(input:$sessionInput){entity{id}}}",
  "variables": Object {
    "sessionInput": Object {
      "description": "[View Release](https://git.hub/some/project/releases/v1.0.0)
<h1 id=\\"my-notes\\">My Notes</h1>
<ul>
<li>PR <a href=\\"google.com\\">some link</a></li>
</ul>
",
      "name": "New Release: v1.0.0",
      "network": "1-1-1-1",
      "sessType": "1234",
    },
  },
}
`;

exports[`postToCore should call core api with custom title 1`] = `
Object {
  "query": "mutation CreateSession($sessionInput:CreateSessionInput!){createSession(input:$sessionInput){entity{id}}}",
  "variables": Object {
    "sessionInput": Object {
      "description": "[View Release](https://git.hub/some/project/releases/v1.0.0)
<h1 id=\\"my-notes\\">My Notes</h1>
<ul>
<li>PR <a href=\\"google.com\\">some link</a></li>
</ul>
",
      "name": "Web v1.0.0",
      "network": "1-1-1-1",
      "sessType": "1234",
    },
  },
}
`;

exports[`postToCore should call core api with minimal config 1`] = `
Object {
  "query": "mutation CreateSession($sessionInput:CreateSessionInput!){createSession(input:$sessionInput){entity{id}}}",
  "variables": Object {
    "sessionInput": Object {
      "description": "[View Release](https://google.com)
<h1 id=\\"my-notes\\">My Notes</h1>
<ul>
<li>PR <a href=\\"google.com\\">some link</a></li>
</ul>
",
      "name": "New Releases: 1.0.0",
      "network": "1-1-1-1",
      "sessType": "1234",
    },
  },
}
`;
